--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -48,7 +48,7 @@ body {
 }
 
 .nav-btn {
-  padding: 0px 36px;
+  padding: 10px 36px;
   border: 2px solid transparent;
   border-radius: 120px;
   margin: 10px 20px;
@@ -119,6 +119,12 @@ body {
   .nav-btn {
     width: 70% !important;
     margin: 0 auto !important;
+  }
+  .w-sm-100 {
+    width: 100% !important;
+  }
+  .py-sm-3 {
+    padding: 10px;
   }
 }
 
@@ -424,7 +430,9 @@ body {
   }
 
   .project-filter {
+    width: 100vw;
     margin: 0;
+    padding-left: 0;
   }
 
   .project-filter li {
