--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1495,7 +1495,7 @@ input:-webkit-autofill:active {
 
 .active {
   font-weight: bold;
-  border-left: 3px solid #ff55f1 !important;
+  border-left: 3px solid #ff55f1;
 }
 
 .nav-service-container {
